Add babel plugins to allow class properties and object rest spread

--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,21 @@
       "loose": true,
       "modules": false
     }]
-  ]
+  ],
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread"
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    },
+    "server": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
