--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "0.16.1",
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-register": "6.24.1",
     "compression": "1.6.2",
     "cors": "2.8.3",
