--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "lint": "eslint **/*.{js,jsx} --quiet"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.10",
+    "@fortawesome/react-fontawesome": "^0.0.18",
     "axios": "0.16.1",
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
