--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
     "babel-preset-env": "1.5.1",
     "babel-preset-react": "6.24.1",
+    "css-loader": "^0.28.11",
     "enzyme": "2.8.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "15.0.1",
@@ -60,10 +61,14 @@
     "jest": "20.0.4",
     "jest-serializer-enzyme": "1.0.0",
     "moxios": "0.4.0",
+    "node-sass": "^4.9.0",
     "nodemon": "1.11.0",
+    "normalize.css": "^8.0.0",
     "prettier": "1.3.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "webpack-dev-server": "2.4.5"
   },
   "name": "complete-intro-to-react",
