--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "redux-thunk": "2.2.0",
     "styled-components": "2.0.0",
     "uuid": "^3.2.1",
-    "webpack": "2.6.1",
+    "webpack": "^3.x.x",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.18.0"
   },
