--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "flow-bin": "0.47.0",
     "jest": "20.0.4",
     "jest-serializer-enzyme": "1.0.0",
