Add HacktoberFest image and update projects json data

--- a/js/projects_data.json
+++ b/js/projects_data.json
@@ -15,7 +15,7 @@
       "slug": "hacktoberfest-2017",
       "external_url": null,
       "images": [],
-      "image_preview_url": null,
+      "image_preview_url": "/public/hacktoberfest_2017_preview.png",
       "image_preview_description": "Digital Ocean Hacktoberfest 2017 logo",
       "date": "October 2018",
       "description": null,
