Change package.json format prettier script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
-    "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
+    "format": "prettier --write --single-quote --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet"
   },
   "private": true,
