--- a/js/projects_data.json
+++ b/js/projects_data.json
@@ -11,15 +11,15 @@
       "description_excerpt": "It seems like cheating to mention this site, but it's been an invaluable way to learn. I've use it as a testing ground for new, interesting technologies and to challenge my understanding. Read on to learn about the evolution of this site."
     },
     {
-      "title": "Santander: Digital Ocean Hacktoberfest 2017",
+      "title": "Digital Ocean Hacktoberfest 2017",
       "slug": "hacktoberfest-2017",
-      "external_url": null,
+      "external_url": "https://github.com/yogodoshi/cansei",
       "images": [],
       "image_preview_url": "/public/images/hacktoberfest_2017_preview.png",
       "image_preview_description": "Digital Ocean Hacktoberfest 2017 logo",
       "date": "October 2018",
-      "description": null,
-      "description_excerpt": "Hacktoberfest description excerpt"
+      "description": "DigitalOcean's Hacktoberfest is a month-long celebration of open source software. In October 2018, I collaborated with Cayo Madeiros to build a way to crowd-source activism using Twitter.",
+      "description_excerpt": "DigitalOcean's Hacktoberfest is a month-long celebration of open source software. In October 2018, I collaborated with Cayo Madeiros to build a way to crowd-source activism using Twitter."
     },
     {
       "title": "Festies",
@@ -29,8 +29,8 @@
       "image_preview_url": "/public/images/festies_preview.png",
       "image_preview_description": "Festies project logo",
       "date": "October 2018",
-      "description": "Some text about Festiesmore text ",
-      "description_excerpt": "Festies description excerpt"
+      "description": "Festies is a community of festival-goers created to give you the best insider information, tips, and reviews for all your favorite festivals. It's your festival bestie!",
+      "description_excerpt": "Festies is a community of festival-goers created to give you the best insider information, tips, and reviews for all your favorite festivals. It's your festival bestie!"
     }
   ]
 }
