--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server",
+    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --env development\"",
+    "build": "webpack --env production",
     "format": "prettier --write --single-quote --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet"
   },
@@ -24,7 +24,6 @@
     "react-dom": "15.5.4",
     "react-router-dom": "4.1.1",
     "uuid": "^3.2.1",
-    "webpack": "^3.x.x",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.18.0"
   },
@@ -52,20 +51,24 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "flow-bin": "0.47.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "20.0.4",
     "jest-serializer-enzyme": "1.0.0",
     "moxios": "0.4.0",
     "node-sass": "^4.9.0",
-    "nodemon": "1.11.0",
+    "nodemon": "^1.17.3",
     "normalize.css": "^8.0.0",
     "prettier": "1.3.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack-dev-server": "2.4.5"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   }
 }
