--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-hot-middleware": "2.18.0"
   },
   "devDependencies": {
+    "autoprefixer": "^8.4.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
@@ -61,6 +62,7 @@
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
     "normalize.css": "^8.0.0",
+    "postcss-loader": "^2.1.4",
     "prettier": "1.3.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
