Update image paths to work with new project directory structure

--- a/src/js/projects_data.json
+++ b/src/js/projects_data.json
@@ -15,7 +15,7 @@
       "slug": "hacktoberfest-2017",
       "external_url": "https://github.com/yogodoshi/cansei",
       "images": [],
-      "image_preview_url": "/public/images/hacktoberfest_2017_preview.png",
+      "image_preview_url": "/images/hacktoberfest_2017_preview.png",
       "image_preview_description": "Digital Ocean Hacktoberfest 2017 logo",
       "date": "October 2018",
       "description": "DigitalOcean's Hacktoberfest is a month-long celebration of open source software. In October 2018, I collaborated with Cayo Madeiros to build a way to crowd-source activism using Twitter.",
@@ -26,7 +26,7 @@
       "slug": "festies",
       "external_url": "http://wefesties.com",
       "images": [],
-      "image_preview_url": "/public/images/festies_preview.png",
+      "image_preview_url": "/images/festies_preview.png",
       "image_preview_description": "Festies project logo",
       "date": "October 2018",
       "description": "Festies is a community of festival-goers created to give you the best insider information, tips, and reviews for all your favorite festivals. It's your festival bestie!",
