--- a/package.json
+++ b/package.json
@@ -11,21 +11,11 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.10",
     "@fortawesome/fontawesome-free-solid": "^5.0.10",
     "@fortawesome/react-fontawesome": "^0.0.18",
-    "axios": "0.16.1",
-    "babel-plugin-dynamic-import-webpack": "1.0.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-register": "6.24.1",
-    "preact": "8.1.0",
-    "preact-compat": "3.16.0",
     "prop-types": "15.5.10",
     "react": "15.5.4",
-    "react-addons-perf": "15.4.2",
     "react-dom": "15.5.4",
     "react-router-dom": "4.1.1",
-    "uuid": "^3.2.1",
-    "webpack-dev-middleware": "1.10.2",
-    "webpack-hot-middleware": "2.18.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.4.1",
@@ -33,11 +23,15 @@
     "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
     "babel-plugin-dynamic-import-node": "1.0.2",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.1",
     "babel-preset-react": "6.24.1",
+    "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "enzyme": "2.8.2",
@@ -64,12 +58,14 @@
     "normalize.css": "^8.0.0",
     "postcss-loader": "^2.1.4",
     "prettier": "1.3.1",
+    "react-addons-perf": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   }
