--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "15.5.10",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-ga": "^2.5.0",
     "react-router-dom": "4.1.1",
     "uuid": "^3.2.1"
   },
