--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,14 +10,20 @@
   ],
   "parserOptions": {
     "ecmaVersion": 2016,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
     "browser": true,
     "node": true
+  },
+  "rules": {
+    "jsx-a11y/anchor-is-valid": [
+      "error", {
+        "components": [ "Link" ],
+        "specialLink": [ "to", "hrefLeft", "hrefRight" ],
+        "aspects": [ "noHref", "invalidHref", "preferButton" ]
+      }
+    ]
   }
 }
