--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-env": "1.5.1",
     "babel-preset-react": "6.24.1",
     "babel-register": "^6.26.0",
+    "bulma": "^0.7.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
