--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.3",
